--- a/interior_quotation_system/index.html
+++ b/interior_quotation_system/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/interior-design.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interior Design</title>
+    <title>Interior Quotation</title>
   </head>
   <body>
     <div id="root"></div>
